git update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,6 @@
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 
@@ -15,7 +13,13 @@ FPS Game/.vscode/*
 FPS Game/Temp/*
 FPS Game/Logs/*
 FPS Game/Obj/*
-FPS Game/Build/*
+FPS Game/Build/
+FPS Game/Build/FPS Game_Data/*
+FPS Game/Build/FPS Game_Data/Managed/*
+FPS Game/Build/FPS Game_Data/Resources/*
+FPS Game/Build/EmbedRuntime/
+FPS Game/Build/etc/
+
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
 
