--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,12 @@ FPS Game/.vscode/*
 FPS Game/Temp/*
 FPS Game/Logs/*
 FPS Game/Obj/*
-FPS Game/Build/
+FPS Game/Build/*
 FPS Game/Build/FPS Game_Data/*
 FPS Game/Build/FPS Game_Data/Managed/*
 FPS Game/Build/FPS Game_Data/Resources/*
-FPS Game/Build/EmbedRuntime/
-FPS Game/Build/etc/
+FPS Game/Build/EmbedRuntime/*
+FPS Game/Build/etc/*
 
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
